tests/scripts/errors/runtime/bitop_on_string.cdo
VAR x = "abc" & 5;
print(x);
